--- a/Capstone.Web/wwwroot/css/site.css
+++ b/Capstone.Web/wwwroot/css/site.css
@@ -74,11 +74,19 @@ ul.nav a {
     border-bottom: groove;
     margin-bottom: 35px;
 }
+
 .homeimagediv {
     display: inline-block;
     align-self: flex-start;
+    margin-bottom: 20px;
     width: 400px;
+    height: 265px;
 }
+
+    .homeimagediv:hover {
+        box-shadow: 0 0 50px 0 forestgreen;
+        border-radius: 20px;
+    }
 
 .homeimage {
     border-radius: 25px;
@@ -92,7 +100,6 @@ ul.nav a {
     width: 450px;
     margin-bottom: 35px;
     margin-left: 20px;
-
 }
 
 .forecastcontainer {
@@ -101,7 +108,7 @@ ul.nav a {
     display: flex;
     flex-direction: row;
     padding: 20px;
-    margin-top: 15px;   
+    margin-top: 15px;
     margin-bottom: 20px;
 }
 
@@ -232,27 +239,28 @@ ul.nav a {
 
 
 #park-survey-table {
-    padding-right: 50px;
+    width: 800px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    border-top: hidden !important;
+}
+
+td {
+    border-bottom: hidden !important;
+    border-top: hidden !important;
 }
 
 #preferencebutton {
     font-size: 1.1rem;
 }
 
-#survey-table{
+#survey-table {
     background-color: navajowhite;
     padding: 20px 20px 20px 20px;
     border-radius: 15px;
 }
 
-#survey-header{
-    text-align:center;
-    color: navajowhite;
-}
-
-#survey-button{
-    background-color: forestgreen;
-    color: navajowhite;
-    margin-left:auto;
-    margin-right:auto;
+#survey-header {
+    text-align: center;
+    color: darkseagreen;
 }
