--- a/Capstone.Web/Views/Home/ParkDetails.cshtml
+++ b/Capstone.Web/Views/Home/ParkDetails.cshtml
@@ -15,7 +15,7 @@
 </script>
 <body class="body">
     <div class="maindiv">
-        <h3 class="parkname" align="center">@Model.ParkName</h3>
+        <h3 id="indie-flower" class="parkname" align="center">@Model.ParkName</h3>
         <p align="center"><i>"@Model.InspirationalQuote"</i> -@Model.InspirationalQuoteSource</p>
         <img src="~/images/parks/@(Model.ParkCode).jpg" class="parkimage" />
 
