--- a/Capstone.Web/Views/Survey/SurveyResults.cshtml
+++ b/Capstone.Web/Views/Survey/SurveyResults.cshtml
@@ -7,7 +7,7 @@
     <div class="maindiv">
         <table class="table table-condensed">
             <thead>
-                <tr>
+                <tr id="indie-flower">
                     <th></th>
                     <th>Park Name</th>
                     <th>Survey Count</th>
