--- a/Capstone.Web/Views/Home/Index.cshtml
+++ b/Capstone.Web/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 
                 </div>
                 <div class="homeparkdesc">
-                    <h3>@park.ParkName</h3>
+                    <h3 id="indie-flower">@park.ParkName</h3>
                     <p>@park.ParkDescription</p>
                 </div>
             </div>
