--- a/Capstone.Web/Views/Home/ParkDetails.cshtml
+++ b/Capstone.Web/Views/Home/ParkDetails.cshtml
@@ -19,7 +19,6 @@
         <p align="center"><i>"@Model.InspirationalQuote"</i> -@Model.InspirationalQuoteSource</p>
         <img src="~/images/parks/@(Model.ParkCode).jpg" class="parkimage" />
 
-
         <p>@Model.ParkDescription</p>
 
         <ul>
@@ -49,7 +48,7 @@
                 {
                     <div class="firstforecast">
                         <h5 class="weatherday">Today</h5>
-                        <img src="~/images/weather/@(forecast.Forecast).png" id="firstday" />
+                        <img src="~/images/weather/@(forecast.Forecast).gif" id="firstday" />
                         <br />
                         <p id="forecasttext">High: <label class="temperature">@(forecast.High)</label>&emsp;Low: <label class="temperature">@(forecast.Low)</label></p>
                         @if (forecast.Forecast == "snow")
@@ -87,7 +86,7 @@
                 {
                     <div class="secondforecast">
                         <h5 class="weatherday">@DateTime.Today.AddDays(1).DayOfWeek</h5>
-                        <img src="~/images/weather/@(forecast.Forecast).png" id="restofweek" />
+                        <img src="~/images/weather/@(forecast.Forecast).gif" id="restofweek" />
                         <p id="forecasttext">High: <label class="temperature">@(forecast.High)</label></p>
                         <p id="forecasttext">Low: <label class="temperature">@(forecast.Low)</label></p>
                         @if (forecast.Forecast == "snow")
@@ -125,7 +124,7 @@
                 {
                     <div class="thirdforecast">
                         <h5 class="weatherday">@DateTime.Today.AddDays(2).DayOfWeek</h5>
-                        <img src="~/images/weather/@(forecast.Forecast).png" id="restofweek" />
+                        <img src="~/images/weather/@(forecast.Forecast).gif" id="restofweek" />
                         <p id="forecasttext">High: <label class="temperature">@(forecast.High)</label></p>
                         <p id="forecasttext">Low: <label class="temperature">@(forecast.Low)</label></p>
                         @if (forecast.Forecast == "snow")
@@ -163,7 +162,7 @@
                 {
                     <div class="fourthforecast">
                         <h5 class="weatherday">@DateTime.Today.AddDays(3).DayOfWeek</h5>
-                        <img src="~/images/weather/@(forecast.Forecast).png" id="restofweek" />
+                        <img src="~/images/weather/@(forecast.Forecast).gif" id="restofweek" />
                         <p id="forecasttext">High: <label class="temperature">@(forecast.High)</label></p>
                         <p id="forecasttext">Low: <label class="temperature">@(forecast.Low)</label></p>
                         @if (forecast.Forecast == "snow")
@@ -201,7 +200,7 @@
                 {
                     <div class="fifthforecast">
                         <h5 class="weatherday">@DateTime.Today.AddDays(4).DayOfWeek</h5>
-                        <img src="~/images/weather/@(forecast.Forecast).png" id="restofweek" />
+                        <img src="~/images/weather/@(forecast.Forecast).gif" id="restofweek" />
                         <p id="forecasttext">High: <label class="temperature">@(forecast.High)</label></p>
                         <p id="forecasttext">Low: <label class="temperature">@(forecast.Low)</label></p>
                         @if (forecast.Forecast == "snow")
@@ -237,5 +236,14 @@
                 }
             }
         </div>
+        <p style="margin-bottom: 30px; text-align: center;;"><i>Credit to <a href="https://www.artstation.com/anthony-drozdov">Anton Drozdov</a> for animated weather icons:</i></p>
+        @if (Model.ParkCode == "ENP")
+        {
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2771.404644750646!2d-80.90083958255615!3d25.28661550000002!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d0a8307a6c05db%3A0xfe03e56762f3197!2sEverglades+National+Park!5e1!3m2!1sen!2sus!4v1532110268298" width="900" height="500" frameborder="0" style="border: groove; margin-bottom: 20px; margin-left: auto; margin-right: auto;" allowfullscreen></iframe>
+        }
+        else
+        {
+            <iframe src="https://maps.google.com/maps?q=@Model.ParkURL&t=k&z=17&ie=UTF8&iwloc=&output=embed" width="900" height="500" frameborder="0" style="border: groove; margin-bottom: 20px; margin-left: auto; margin-right: auto;" allowfullscreen></iframe>
+        }
     </div>
 </body>
