--- a/Capstone.Web/wwwroot/css/site.css
+++ b/Capstone.Web/wwwroot/css/site.css
@@ -119,7 +119,7 @@ ul.nav a {
     flex-direction: row;
     padding: 20px;
     margin-top: 15px;
-    margin-bottom: 20px;
+    margin-bottom: 0;
 }
 
 .parkimage {
@@ -142,6 +142,13 @@ ul.nav a {
     color: cornflowerblue;
     font-weight: bold;
     text-align: center;
+}
+
+.temperature{
+    font-weight: bold;
+    color: navy;
+    font-size: 1.4rem;
+    font-style: italic;
 }
 
 .firstforecast {
@@ -211,6 +218,7 @@ ul.nav a {
 
 #forecasttext {
     font-size: 1.4rem;
+    color: navy;
     font-weight: initial;
 }
 
@@ -222,17 +230,24 @@ ul.nav a {
 
 #firstday {
     width: 150px;
+    border-radius: 50%;
+    box-shadow: inset 0 0 8px 8px white;
     align-self: center;
 }
 
 #restofweek {
     width: 100px;
+    border-radius: 50%;
+    box-shadow: inset 0 0 8px 8px white;
+    margin-bottom: 10px;
     align-self: center;
 }
 
+
 #forecasttext {
     font-size: 1.4rem;
-    font-weight: initial;
+    font-weight: bold;
+    color: navy;
     text-align: center;
 }
 
