--- a/Capstone.Web/Views/Home/ParkDetails.cshtml
+++ b/Capstone.Web/Views/Home/ParkDetails.cshtml
@@ -39,7 +39,7 @@
             }
         </ul>
         <div align="center">
-            <button type="button" id="preferencebutton" value="Change to Celsius" class="btn btn-success" onclick="setPreference()">Change to Celcius</button>
+            <button type="button" id="preferencebutton" value="Change to Celsius" class="btn btn-success" style="color: black;" onclick="setPreference()">Change to Celcius</button>
         </div>
         <div class="forecastcontainer">
             @foreach (var forecast in Model.Forecasts)
