--- a/Capstone.Web/Views/Survey/Index.cshtml
+++ b/Capstone.Web/Views/Survey/Index.cshtml
@@ -37,7 +37,7 @@
                 </tbody>
             </table>
             <div align="center">
-                <input class="btn btn-success" type="submit" value="Submit Survey" />
+                <input class="btn btn-success" type="submit" value="Submit Survey" style="color: black;"/>
             </div>
         </form>
     </div>
