photoshopped a new logo

--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="topbanner">
-        <img src="~/images/logo.png" class="topbannerlogo"/>
+        <img src="~/images/natlparks.png" class="topbannerlogo"/>
     </div>
     <nav class="navbar navbar-inverse" id="navbar">
         <div class="container">
