moved carousel to home page, added button for easier navigation

--- a/Capstone.Web/Views/Home/Index.cshtml
+++ b/Capstone.Web/Views/Home/Index.cshtml
@@ -4,6 +4,86 @@
 }
 <body class="body">
     <div class="maindiv">
+        <h3 align="center"><i>Out here it's all earth and sky, reconnect with the basics of life.</i></h3>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" style="border: groove; margin-top: 10px; margin-bottom: 30px;">
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
+                <li data-target="#myCarousel" data-slide-to="5"></li>
+                <li data-target="#myCarousel" data-slide-to="6"></li>
+                <li data-target="#myCarousel" data-slide-to="7"></li>
+                <li data-target="#myCarousel" data-slide-to="8"></li>
+            </ol>
+
+            <div class="carousel-inner">
+                <div class="item active" id="camper">
+                    <img src="~/images/carousel/camper1.jpeg" alt="camper">
+                    <div class="carousel-caption">
+                        <p>“An early morning walk is a blessing for the whole day.” —Henry David Thoreau</p>
+                    </div>
+                </div>
+                <div class="item" id="camper">
+                    <img src="~/images/carousel/camper2.jpeg" alt="camper">
+                    <div class="carousel-caption">
+                        <p>“If you truly love Nature, you will find beauty everywhere.” —Vincent Van Gogh</p>
+                    </div>
+                </div>
+                <div class="item" id="camper">
+                    <img src="~/images/carousel/camper3.jpeg" alt="camper">
+                    <div class="carousel-caption">
+                        <p>“I believe a leaf of grass is no less than the journey-work of the stars.” —Walt Whitman</p>
+                    </div>
+                </div>
+                <div class="item" id="camper">
+                    <img src="~/images/carousel/camper4.jpg" alt="camper">
+                    <div class="carousel-caption">
+                        <p>“In the spring, at the end of the day, you should smell like dirt.” —Margaret Atwood</p>
+                    </div>
+                </div>
+                <div class="item" id="camper">
+                    <img src="~/images/carousel/camper5.jpeg" alt="camper">
+                    <div class="carousel-caption">
+                        <p>“Nature does not hurry, yet everything is accomplished.” —Lao Tzu</p>
+                    </div>
+                </div>
+                <div class="item" id="camper">
+                    <img src="~/images/carousel/camper6.jpeg" alt="camper">
+                    <div class="carousel-caption">
+                        <p>“The richness I achieve comes from Nature, the source of my inspiration.” —Claude Monet</p>
+                    </div>
+                </div>
+                <div class="item" id="camper">
+                    <img src="~/images/carousel/camper7.jpeg" alt="camper">
+                    <div class="carousel-caption">
+                        <p>“These people have learned not from books, but in the fields, in the wood, on the river bank. Their teachers have been the birds themselves, when they sang to them, the sun when it left a glow of crimson behind it at setting, the very trees, and wild herbs.” —Anton Chekhov</p>
+                    </div>
+                </div>
+                <div class="item" id="camper">
+                    <img src="~/images/carousel/camper8.jpeg" alt="camper">
+                    <div class="carousel-caption">
+                        <p>“I wonder if the snow loves the trees and fields, that it kisses them so gently? And then it covers them up snug, you know, with a white quilt; and perhaps it says ‘Go to sleep, darlings, till the summer comes again.’” —Lewis Carroll</p>
+                    </div>
+                </div>
+                <div class="item" id="camper">
+                    <img src="~/images/carousel/camper9.jpeg" alt="camper">
+                    <div class="carousel-caption">
+                        “Climb the mountains and get their good tidings. Nature’s peace will flow into you as sunshine flows into trees. The winds will blow their own freshness into you, and the storms their energy, while cares will drop away from you like the leaves of autumn.” —John Muir
+                    </div>
+                </div>
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+
         @foreach (var park in Model)
         {
 
