added SQL script for DAL

--- a/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -37,10 +37,10 @@
                     <li><a asp-controller="Survey" asp-action="SurveyResults">Survey Results</a></li>
                 </ul>
                 <div class="dropdown show" style="height: 13px; margin-top: 7px;">
-                    <a class="btn btn-success dropdown-toggle" id="dropDownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-success dropdown-toggle" id="dropDownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Parks
                         <i class="caret"></i>
-                    </a>
+                    </button>
                     <div class="dropdown-menu" aria-labeledby="dropDownMenuButton">
                         <ul style="list-style-type: none;">
                             <li><a asp-controller="Home" asp-action="ParkDetails" asp-route-parkcode="CVNP">Cuyahoga Valley National Park</a></li>
